# phenixcode

./: CMakeLists.txt  README.md  build_rel.bat  settings.json  version.cmake
.github/workflows/: build.yml
assets/: settings.json  settings.template.json
include/: app.h  httpserver.h  inference.h  instregistry.h  json_shim.h  settings.h  tokenizer.h  utils.h
src/: app.cpp  auth.cpp  cutils.cpp  database.cpp  httpserver.cpp  inference.cpp  instregistry.cpp  main.cpp  settings.cpp  tests.cpp  utils.cpp
ui/clients/spa-svelte/src/lib/: markdown.ts
ui/clients/spa-svelte/src/lib/widgets/: ChatPanel.svelte  ContextFiles.svelte  FileAttachments.svelte  InputArea.svelte
ui/clients/webview/: CMakeLists.txt  appconfig.json
ui/clients/webview/src/: main.cpp
ui/dashboard/spa-svelte/src/lib/widgets/project-panels/: Database.svelte  Embedding.svelte  Generation.svelte  Source.svelte
ui/dashboard/webview/: CMakeLists.txt  admconfig.json
ui/dashboard/webview/assets/phenixcode_projects/: settings.json
ui/dashboard/webview/src/: main.cpp
ui/shared/: utils.h
